# tortoise-orm-demo

./: Makefile  main.py  pyproject.toml  readme.md
apps/class_views/: demo.py
apps/student/: models.py  student.py
apps/todoList/: models.py  todo.py
middlewares/: middlewares.py
migrations/models/: 0_20241115143330_init.py  1_20241115155625_update.py
settings/: settings.py
