[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["YanchuangJin <YanchuangJin@helium10.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.110.2"
tortoise-orm = {extras = ["accel"], version = "^0.21.7"}
aerich = "^0.7.2"
httptools = "^0.6.4"
fastapi-admin = "^1.0.4"



[tool.aerich]
tortoise_orm = "settings.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
